added more to landing page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,33 @@
-<div class="navbar is-spaced has-background-black">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="#">
-      <img style="max-height: 3.75rem" [src]="logoImagePath">
-    </a>
-  </div>
-  <div class="navbar-menu">
-    <div class="navbar-end">
-      <!--loop through navbar items object array -->
-      <div class="navbar-item">
-        <span class="has-text-white">
-          Home
-        </span>
+<div class="has-background-black">
+  <div class="container">
+    <div class="navbar is-spaced has-background-black">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="#">
+          <img style="max-height: 3.75rem" [src]="logoImagePath">
+        </a>
       </div>
-      <div class="navbar-item">
-        <span class="has-text-white">
-          Projects
-        </span>
+      <div class="navbar-menu">
+        <div class="navbar-end">
+          <!--loop through navbar items object array -->
+          <div class="navbar-item">
+            <div class="button">
+              <span class="has-text-black" style="font-family: HelveticaNeue; font-size: 1.5rem;">
+                About Me
+              </span>
+            </div>
+          </div>
+          <div class="navbar-item">
+            <div class="button">
+              <span class="has-text-black" style="font-family: HelveticaNeue; font-size: 1.5rem;">
+                Projects
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+
 
