--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,35 +1,58 @@
 <div class="has-background-black">
-  <div class="container">
-    <div class="title has-text-white"
-         style="font-family: HelveticaNeue;
+  <div style="margin-left: 10rem; margin-right: -10rem;">
+    <div class="container">
+      <div class="title has-text-white"
+           style="font-family: HelveticaNeue;
                 font-size: 7rem;
                 margin-bottom: -20px">Andre
-    </div>
-    <div class="title has-text-white"
-         style="font-family: HelveticaNeue; font-size: 1.5rem">
-      Godinez .
-    </div>
-    <div class="columns">
-      <div class="column">
-        <div class="title has-text-white" style="font-family: HelveticaNeue; font-size: 2rem">
-          4th Year Computer Science student based in Galway interested in Full Stack Web Development, Artificial
-          Intelligence, Machine Learning
-          , Cloud and Big Data.
-        </div>
       </div>
-      <div class="column"></div>
-    </div>
-    <div class="container">
-      <div class="columns">
-        <div class="column is-one-fifth">
-          <div class="title has-text-white" style="font-family: HelveticaNeue; font-size: 1.5rem">
-            Want to work on something together? Let's talk about it.
+      <div class="title has-text-white"
+           style="font-family: HelveticaNeue; font-size: 2rem">
+        Godinez .
+      </div>
+      <div class="columns" style="padding-top: 4rem">
+        <div class="column is-two-thirds">
+          <div class="title has-text-white" style="font-family: HelveticaNeue; font-size: 2rem">
+            4th Year Computer Science student based in Galway interested in Full Stack Web Development, Artificial
+            Intelligence, Machine Learning
+            , Cloud and Big Data.
           </div>
         </div>
-        <div class="column is-offset-two-fifths">
-         <figure class="image">
-           <img style="width: 18rem; height: 14rem" [src]="avatarImagePath">
-         </figure>
+        <div class="column"></div>
+      </div>
+      <div class="container">
+        <div class="columns">
+          <div class="column is-one-fifth">
+            <div class="title has-text-white" style="font-family: HelveticaNeue; font-size: 1.5rem; padding-top: 6rem">
+              Want to work on something together? Let's talk about it.
+            </div>
+            <div class="button">
+              <span style="font-family: HelveticaNeue; font-size: 1.5rem;">Say Hi!</span>
+            </div>
+          </div>
+          <div class="column is-offset-one-fifth">
+            <figure class="image">
+              <img style="width: 30rem; height: 23rem" [src]="avatarImagePath">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="has-background-white">
+  <div style="margin-left: 10rem; margin-right: -10rem;">
+    <div class="container" style="padding-bottom: 5rem;">
+      <div class="columns">
+        <div class="column" style="padding-top: 6rem">
+          <div class="title has-text-black" style="font-family: HelveticaNeue; font-size: 1.5rem;">
+            Proud to have finished an internship with
+          </div>
+        </div>
+        <div class="column" style="padding-top: 4rem; padding-right: 24rem">
+          <figure class="image">
+            <img style="width: 12rem; height: 5rem" [src]="fidelityImagePath">
+          </figure>
         </div>
       </div>
     </div>
